# painting

./: .gitignore  CMakeLists.txt  README.md  Task.md  bounding_box.h  draw.h  kuboid.h  main.cpp  polyhedron.h  segment.h  tests.h  vertex.h
